# smart-shell

./: 404.html  CHANGELOG.md  README.md  ai_wrapper.py  config.py  index.html  install.sh  main.py  mkdocs.yml  pyproject.toml  requirements.txt  safety.py  setup.py  shell_builder.py  sitemap.xml  test_smart_shell.py  utils.py
CHANGELOG/: index.html
DEVELOPMENT/: index.html
SAFETY/: index.html
api/: index.html
author/: index.html
contributing/: index.html
development/: index.html
docs/: CHANGELOG.md  DEVELOPER_DOCS.md  DEVELOPMENT.md  SAFETY.md  api.md  author.md  contributing.md  development.md  faq.md  features.md  futurechanges.md  index.md  installation.md  license.md  safety.md  uninstall.md  usage.md
examples/: basic_usage.py
faq/: index.html
features/: index.html
futurechanges/: index.html
installation/: index.html
license/: index.html
safety/: index.html
search/: search_index.json
site/: 404.html
site/CHANGELOG/: index.html
site/author/: index.html
site/contributing/: index.html
site/faq/: index.html
site/installation/: index.html
site/safety/: index.html
site/search/: search_index.json
site/usage/: index.html
smart_shell/: __init__.py  ai_wrapper.py  config.py  main.py  model_info.py  safety.py  setup_logic.py  shell_builder.py  test_smart_shell.py  utils.py
smart_shell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
uninstall/: index.html
usage/: index.html
